refactor Entities and Controller