@@ -1,7 +1,7 @@
 package com.example.libraryproject.services;
 
 import com.example.libraryproject.entity.Reader;
-import com.example.libraryproject.repo.BookHistoryRepo;
+import com.example.libraryproject.repo.BookReaderRepo;
 import com.example.libraryproject.repo.ReaderRepo;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
@@ -16,7 +16,7 @@ import java.util.stream.StreamSupport;
 public class ReaderService implements ClassicalDao<Reader> {
     private final ReaderRepo readerRepo;
     private final UserService userService;
-    private final BookHistoryRepo bookHistoryRepo;
+    private final BookReaderRepo bookHistoryRepo;
 
     @Override
     public Reader save(Reader reader) {
@@ -38,7 +38,7 @@ public class ReaderService implements ClassicalDao<Reader> {
 
     @Override
     public List<Reader> getAll() {
-        return StreamSupport.stream(readerRepo.findAll().spliterator(), false).collect(Collectors.toList());
+        return StreamSupport.stream(readerRepo.findAll().spliterator(), false).toList();
     }
 
     public Optional<Reader> findByEmail(String email) {
